--- a/drugaddiction/src/main/res/layout/activity_main.xml
+++ b/drugaddiction/src/main/res/layout/activity_main.xml
@@ -9,6 +9,21 @@
     android:layout_height="match_parent">
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            app:itemTextColor="#ffff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            app:menu="@menu/bottom_navigation"
+            android:background="?android:attr/windowBackground"/>
+    </RelativeLayout>
+
+
 
 
 
@@ -19,7 +34,6 @@
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
         android:id="@+id/nv">
-
     </com.google.android.material.navigation.NavigationView>
 
 
