add admin login with gmail

--- a/drugaddiction/src/main/res/layout/activity_user_profile.xml
+++ b/drugaddiction/src/main/res/layout/activity_user_profile.xml
@@ -76,10 +76,115 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="2dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="7dp"
+                android:orientation="horizontal"
+                android:weightSum="3">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.2"
+                    android:orientation="vertical"
+                    android:weightSum="2">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ic_mail_outline" />
+
+                    <TextView
+                        android:id="@+id/donerPEmail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="0.8"
+                        android:letterSpacing="0.2"
+                        android:text="TextView"
+                        android:textSize="10sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.2"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ic_contact_phone_black_24dp" />
+
+                    <TextView
+                        android:id="@+id/donerCellNo"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.8"
+                        android:fontFamily="sans-serif-light"
+                        android:letterSpacing="0.3"
+                        android:text="03133575758"
+                        android:textAlignment="center"
+                        android:textSize="10sp" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.6"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/ageicon" />
+
+                    <TextView
+                        android:id="@+id/donerAge"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:fontFamily="sans-serif-light"
+                        android:letterSpacing="0.3"
+                        android:text="15"
+                        android:textAlignment="center"
+                        android:textSize="10sp" />
+
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="20dp"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="2dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="10dp">
 
@@ -88,8 +193,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="7dp"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -98,49 +202,22 @@
                         android:orientation="vertical"
                         android:weightSum="2">
 
-                        <ImageView
+                        <TextView
                             android:layout_width="wrap_content"
-                            android:layout_height="0dp"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            app:srcCompat="@drawable/ic_mail_outline" />
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:text="Diseases"
+                            android:textStyle="bold|italic" />
 
                         <TextView
-                            android:id="@+id/donerPEmail"
-                            android:layout_width="wrap_content"
-                            android:layout_height="0dp"
-                            android:layout_gravity="center"
-                            android:layout_weight="0.8"
-                            android:letterSpacing="0.2"
-                            android:text="TextView"
-                            android:textSize="10sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="0dp"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            app:srcCompat="@drawable/ic_contact_phone_black_24dp" />
-
-                        <TextView
-                            android:id="@+id/donerCellNo"
+                            android:id="@+id/donerDiseases"
                             android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:layout_weight="0.8"
-                            android:fontFamily="sans-serif-light"
-                            android:letterSpacing="0.3"
-                            android:text="03133575758"
-                            android:textAlignment="center"
-                            android:textSize="10sp" />
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp" />
 
                     </LinearLayout>
+
+
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
