--- a/drugaddiction/src/main/res/layout/activity_login.xml
+++ b/drugaddiction/src/main/res/layout/activity_login.xml
@@ -6,21 +6,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+
     android:layout_height="match_parent"
-    android:background="#29B6F6"
+    android:background="@drawable/gradient"
     tools:context="com.shinwari.registertion.Registeration.LoginActivity">
 
    <androidx.cardview.widget.CardView
+       app:cardCornerRadius="50dp"
        android:layout_margin="45dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="480dp">
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="30dp"
-        app:srcCompat="@drawable/donate" />
+
+       <ImageView
+           android:id="@+id/imageView2"
+           android:layout_width="match_parent"
+           android:layout_height="100dp"
+           android:layout_marginTop="30dp"
+           app:srcCompat="@drawable/donate" />
 
     <FrameLayout
         android:id="@+id/loginView"
