--- a/drugaddiction/src/main/res/layout/activity_register_donater.xml
+++ b/drugaddiction/src/main/res/layout/activity_register_donater.xml
@@ -167,6 +167,51 @@
 
                 <com.google.android.material.textfield.TextInputEditText
 
+                    android:id="@+id/regDonaterAge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ageicon"
+                    android:drawablePadding="10dp"
+                    android:drawableStart="@drawable/ageicon"
+                    android:hint="Age"
+                    android:inputType="phone"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="5dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:id="@+id/regDonaterDiseases"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/diseases"
+                    android:drawablePadding="10dp"
+                    android:drawableStart="@drawable/diseases"
+                    android:hint="Disease"
+                   android:inputType="text"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="5dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+
                     android:id="@+id/regDonaterLocation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
