--- a/drugaddiction/src/main/res/layout/activity_register_donater.xml
+++ b/drugaddiction/src/main/res/layout/activity_register_donater.xml
@@ -49,10 +49,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
                 android:fontFamily="sans-serif-light"
-                android:text="User Image"
+                android:text="Select Image"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark"
@@ -167,6 +167,29 @@
 
                 <com.google.android.material.textfield.TextInputEditText
 
+                    android:id="@+id/regDonaterLocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
+                    android:drawablePadding="10dp"
+                    android:drawableStart="@drawable/ic_location_on_black_24dp"
+                    android:hint="Location"
+
+                    android:inputType="text"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="5dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+
                     android:id="@+id/regDonaterAge"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -201,6 +224,7 @@
                     android:textSize="14sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -212,17 +236,18 @@
 
                 <com.google.android.material.textfield.TextInputEditText
 
-                    android:id="@+id/regDonaterLocation"
+                    android:id="@+id/regDonaterSpecilization"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
+                    android:drawableLeft="@drawable/diseases"
                     android:drawablePadding="10dp"
-                    android:drawableStart="@drawable/ic_location_on_black_24dp"
-                    android:hint="Location"
-
+                    android:drawableStart="@drawable/diseases"
+                    android:hint="Specilization"
                     android:inputType="text"
                     android:textSize="14sp" />
             </com.google.android.material.textfield.TextInputLayout>
+
+
 
             <Button
                 android:id="@+id/doanterSubmmit"
