--- a/drugaddiction/src/main/res/layout/activity_physico_main.xml
+++ b/drugaddiction/src/main/res/layout/activity_physico_main.xml
@@ -5,29 +5,22 @@
     android:id="@+id/activity_main"
     android:clickable="true"
     android:layout_width="match_parent"
+    android:background="#FFF"
     android:layout_height="match_parent">
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:background="#FFEB3B"
-        android:id="@+id/recyclerview_id"
-        android:layout_height="wrap_content">
-    </androidx.recyclerview.widget.RecyclerView>
+
 
     <RelativeLayout
-        android:id="@+id/color"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
-
-        <!--<com.google.android.material.bottomnavigation.BottomNavigationView-->
-            <!--android:id="@+id/bottom_navigation"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:background="?android:attr/windowBackground"-->
-            <!--app:itemTextColor="@color/common_google_signin_btn_text_dark_focused"-->
-            <!--app:menu="@menu/bottom_navigation" />-->
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="?android:attr/windowBackground"
+            app:itemTextColor="@color/common_google_signin_btn_text_dark_focused"
+            app:menu="@menu/bottom_navigation" />
     </RelativeLayout>
 
 
@@ -39,7 +32,7 @@
         android:layout_height="match_parent"
         app:menu="@menu/navigation_menu"
         android:layout_gravity="start"
-        app:headerLayout="@layout/admin_nav"
+        app:headerLayout="@layout/doctor_nav"
         android:id="@+id/nv">
     </com.google.android.material.navigation.NavigationView>
 
